# oclutils

./: .gitignore  CMakeLists.txt  NvidiaUtils.cpp  NvidiaUtils.hpp  OclUtils.cpp  OclUtils.hpp  README.markdown
example/: CMakeLists.txt  Example.cpp  FindOpenCL.cmake
src/: CMakeLists.txt  OclUtils.cpp  OclUtils.hpp
